Fixed several issues with API
